fixed propagation box alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ table td {
 	width: 8px;
 	height: 8px;
 	float: left;
-	top: 7px;
+	top: 6px;
 	margin-right: 5px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
